--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "databrain",
+  "name": "https://asimaries.github.io/databrain-assignment/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite --port 5000",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
