--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "https://asimaries.github.io/databrain-assignment/",
+  "name": "databrain",
   "private": true,
   "version": "0.0.0",
   "type": "module",
